<resources>
    <string name="app_name">Task Manager</string>
    <string name="app_nameImc">IMC Calculator</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="lbl_login"></string>
    <string name="lbl_password"></string>
    <string name="lbl_enter">Login</string>
    <string name="msg_welcome">Welcome %s</string>

    <string name="lbl_height"></string>
    <string name="lbl_weight"></string>
    <string name="lbl_calcular">Calculate</string>
    <string name="msg_imc">Your IMC: %f</string>
    <string name="lbl_description">Description</string>
    <string name="lbl_save">Save</string>
    <string name="lbl_add">Add</string>
    <string name="lbl_name">Name</string>
    <string name="msg_required">Empty field</string>
    <string name="msg_save_sucess">Save sucessfull</string>
    <string name="lbl_delete"> Delete </string>
    <string name="lbl_edit"> Edit </string>
    <string name="msg_delete_succesful"> Delete Succesful </string>
    <string name="lbl_confirm">  Confirm</string>
    <string name="msg_confirm_delete"> Want to delete this record? </string>
    <string name="lbl_yes"> Yes </string>
    <string name="lbl_no"> No </string>
    <string name="lbl_OK" />
    <string name="lbl_btnSaveLabel">Save Label</string>
    <string name="lbl_zipCode">zipCode</string>
    <string name="lbl_type">Tipo de Logradouro</string>
    <string name="lbl_btnCep">lbl_btnCep</string>
    <string name="lbl_rua">lbl_rua</string>
    <string name="lbl_bairro">lbl_bairro</string>
    <string name="lbl_cidade">lbl_cidade</string>
    <string name="lbl_estado">lbl_estado</string>
</resources>
