<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lbl_name" />

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lbl_description" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Spinner
            android:id="@+id/spinnerLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            />

        <Button
            android:id="@+id/btn_go_label"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:hint="@string/lbl_btnSaveLabel"
            />
    </LinearLayout>





</LinearLayout>